@@ -6,167 +6,162 @@ import java.util.LinkedList;
 
 // TODO refactor me
 public class GameOld implements IGame {
-  ArrayList players = new ArrayList();
-  int[] places = new int[6];
-  int[] purses = new int[6];
-  boolean[] inPenaltyBox = new boolean[6];
+   ArrayList players = new ArrayList();
+   int[] places = new int[6];
+   int[] purses = new int[6];
+   boolean[] inPenaltyBox = new boolean[6];
 
-  LinkedList popQuestions = new LinkedList();
-  LinkedList scienceQuestions = new LinkedList();
-  LinkedList sportsQuestions = new LinkedList();
-  LinkedList rockQuestions = new LinkedList();
+   LinkedList popQuestions = new LinkedList();
+   LinkedList scienceQuestions = new LinkedList();
+   LinkedList sportsQuestions = new LinkedList();
+   LinkedList rockQuestions = new LinkedList();
 
-  int currentPlayer = 0;
-  boolean isGettingOutOfPenaltyBox;
+   int currentPlayer = 0;
+   boolean isGettingOutOfPenaltyBox;
 
-  public GameOld() {
-    for (int i = 0; i < 50; i++) {
-      popQuestions.addLast("Pop Question " + i);
-      scienceQuestions.addLast(("Science Question " + i));
-      sportsQuestions.addLast(("Sports Question " + i));
-      rockQuestions.addLast(createRockQuestion(i));
-    }
-  }
+   public GameOld() {
+      for (int i = 0; i < 50; i++) {
+         popQuestions.addLast("Pop Question " + i);
+         scienceQuestions.addLast(("Science Question " + i));
+         sportsQuestions.addLast(("Sports Question " + i));
+         rockQuestions.addLast(createRockQuestion(i));
+      }
+   }
 
-  public String createRockQuestion(int index) {
-    return "Rock Question " + index;
-  }
+   public String createRockQuestion(int index) {
+      return "Rock Question " + index;
+   }
 
-  public boolean isPlayable() {
-    return (howManyPlayers() >= 2);
-  }
+   public boolean isPlayable() {
+      return (howManyPlayers() >= 2);
+   }
 
-  public boolean add(String playerName) {
+   public boolean add(String playerName) {
+      places[howManyPlayers()] = 1;
+      purses[howManyPlayers()] = 0;
+      inPenaltyBox[howManyPlayers()] = false;
+      players.add(playerName);
 
+      System.out.println(playerName + " was added");
+      System.out.println("They are player number " + players.size());
+      return true;
+   }
 
-    players.add(playerName);
-    places[howManyPlayers()] = 0;
-    purses[howManyPlayers()] = 0;
-    inPenaltyBox[howManyPlayers()] = false;
+   public int howManyPlayers() {
+      return players.size();
+   }
 
-    System.out.println(playerName + " was added");
-    System.out.println("They are player number " + players.size());
-    return true;
-  }
+   public void roll(int roll) {
+      System.out.println(players.get(currentPlayer) + " is the current player");
+      System.out.println("They have rolled a " + roll);
 
-  public int howManyPlayers() {
-    return players.size();
-  }
+      if (inPenaltyBox[currentPlayer]) {
+         if (roll % 2 != 0) {
+            isGettingOutOfPenaltyBox = true;
 
-  public void roll(int roll) {
-    System.out.println(players.get(currentPlayer) + " is the current player");
-    System.out.println("They have rolled a " + roll);
+            System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
+            places[currentPlayer] = places[currentPlayer] + roll;
+            if (places[currentPlayer] > 12) places[currentPlayer] = places[currentPlayer] - 12;
 
-    if (inPenaltyBox[currentPlayer]) {
-      if (roll % 2 != 0) {
-        isGettingOutOfPenaltyBox = true;
+            System.out.println(players.get(currentPlayer)
+                               + "'s new location is "
+                               + places[currentPlayer]);
+            System.out.println("The category is " + currentCategory());
+            askQuestion();
+         } else {
+            System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
+            isGettingOutOfPenaltyBox = false;
+         }
 
-        System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
-        places[currentPlayer] = places[currentPlayer] + roll;
-        if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
-
-        System.out.println(players.get(currentPlayer)
-                           + "'s new location is "
-                           + places[currentPlayer]);
-        System.out.println("The category is " + currentCategory());
-        askQuestion();
       } else {
-        System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
-        isGettingOutOfPenaltyBox = false;
+
+         places[currentPlayer] = places[currentPlayer] + roll;
+         if (places[currentPlayer] > 12) places[currentPlayer] = places[currentPlayer] - 12;
+
+         System.out.println(players.get(currentPlayer)
+                            + "'s new location is "
+                            + places[currentPlayer]);
+         System.out.println("The category is " + currentCategory());
+         askQuestion();
       }
 
-    } else {
+   }
 
-      places[currentPlayer] = places[currentPlayer] + roll;
-      if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
-
-      System.out.println(players.get(currentPlayer)
-                         + "'s new location is "
-                         + places[currentPlayer]);
-      System.out.println("The category is " + currentCategory());
-      askQuestion();
-    }
-
-  }
-
-  private void askQuestion() {
-    if (currentCategory() == "Pop")
-      System.out.println(popQuestions.removeFirst());
-    if (currentCategory() == "Science")
-      System.out.println(scienceQuestions.removeFirst());
-    if (currentCategory() == "Sports")
-      System.out.println(sportsQuestions.removeFirst());
-    if (currentCategory() == "Rock")
-      System.out.println(rockQuestions.removeFirst());
-  }
+   private void askQuestion() {
+      if (currentCategory() == "Pop")
+         System.out.println(popQuestions.remove(0));
+      if (currentCategory() == "Science")
+         System.out.println(scienceQuestions.remove(0));
+      if (currentCategory() == "Sports")
+         System.out.println(sportsQuestions.remove(0));
+      if (currentCategory() == "Rock")
+         System.out.println(rockQuestions.remove(0));
+   }
 
 
-  private String currentCategory() {
-    if (places[currentPlayer] == 0) return "Pop";
-    if (places[currentPlayer] == 4) return "Pop";
-    if (places[currentPlayer] == 8) return "Pop";
-    if (places[currentPlayer] == 1) return "Science";
-    if (places[currentPlayer] == 5) return "Science";
-    if (places[currentPlayer] == 9) return "Science";
-    if (places[currentPlayer] == 2) return "Sports";
-    if (places[currentPlayer] == 6) return "Sports";
-    if (places[currentPlayer] == 10) return "Sports";
-    return "Rock";
-  }
+   private String currentCategory() {
+      if (places[currentPlayer] - 1 == 0) return "Pop";
+      if (places[currentPlayer] - 1 == 4) return "Pop";
+      if (places[currentPlayer] - 1 == 8) return "Pop";
+      if (places[currentPlayer] - 1 == 1) return "Science";
+      if (places[currentPlayer] - 1 == 5) return "Science";
+      if (places[currentPlayer] - 1 == 9) return "Science";
+      if (places[currentPlayer] - 1 == 2) return "Sports";
+      if (places[currentPlayer] - 1 == 6) return "Sports";
+      if (places[currentPlayer] - 1 == 10) return "Sports";
+      return "Rock";
+   }
 
-  public boolean wasCorrectlyAnswered() {
-    if (inPenaltyBox[currentPlayer]) {
-      if (isGettingOutOfPenaltyBox) {
-        System.out.println("Answer was correct!!!!");
-        purses[currentPlayer]++;
-        System.out.println(players.get(currentPlayer)
-                           + " now has "
-                           + purses[currentPlayer]
-                           + " Gold Coins.");
+   public boolean handleCorrectAnswer() {
+      if (inPenaltyBox[currentPlayer]) {
+         if (isGettingOutOfPenaltyBox) {
+            System.out.println("Answer was correct!!!!");
+            purses[currentPlayer]++;
+            System.out.println(players.get(currentPlayer)
+                               + " now has "
+                               + purses[currentPlayer]
+                               + " Gold Coins.");
 
-        boolean winner = didPlayerWin();
-        currentPlayer++;
-        if (currentPlayer == players.size()) currentPlayer = 0;
+            boolean winner = didPlayerWin();
+            currentPlayer++;
+            if (currentPlayer == players.size()) currentPlayer = 0;
 
-//        inPenaltyBox[currentPlayer] = false;
+            return winner;
+         } else {
+            currentPlayer++;
+            if (currentPlayer == players.size()) currentPlayer = 0;
+            return true;
+         }
 
-        return winner;
       } else {
-        currentPlayer++;
-        if (currentPlayer == players.size()) currentPlayer = 0;
-        return true;
+
+         System.out.println("Answer was corrent!!!!");
+         purses[currentPlayer]++;
+         System.out.println(players.get(currentPlayer)
+                            + " now has "
+                            + purses[currentPlayer]
+                            + " Gold Coins.");
+
+         boolean winner = didPlayerWin();
+         currentPlayer++;
+         if (currentPlayer == players.size()) currentPlayer = 0;
+
+         return winner;
       }
+   }
 
+   public boolean wrongAnswer() {
+      System.out.println("Question was incorrectly answered");
+      System.out.println(players.get(currentPlayer) + " was sent to the penalty box");
+      inPenaltyBox[currentPlayer] = true;
 
-    } else {
-
-      System.out.println("Answer was corrent!!!!");
-      purses[currentPlayer]++;
-      System.out.println(players.get(currentPlayer)
-                         + " now has "
-                         + purses[currentPlayer]
-                         + " Gold Coins.");
-
-      boolean winner = didPlayerWin();
       currentPlayer++;
       if (currentPlayer == players.size()) currentPlayer = 0;
-
-      return winner;
-    }
-  }
-
-  public boolean wrongAnswer() {
-    System.out.println("Question was incorrectly answered");
-    System.out.println(players.get(currentPlayer) + " was sent to the penalty box");
-    inPenaltyBox[currentPlayer] = true;
-
-    currentPlayer++;
-    if (currentPlayer == players.size()) currentPlayer = 0;
-    return true;
-  }
+      return true;
+   }
 
 
-  private boolean didPlayerWin() {
-    return !(purses[currentPlayer] == 6);
-  }
+   private boolean didPlayerWin() {
+      return !(purses[currentPlayer] == 6);
+   }
 }
